@startuml DiagramaClases

title Diagrama de Clases - Sistema de Ventas y Cobranzas

' Enumeraciones
enum TipoUsuarioEnum {
  VENDEDOR
  ADMINISTRADOR
}

enum TipoTransaccionEnum {
  VCR
  VCO
}

enum MonedaEnum {
  BOLIVIANOS
  DOLARES
}

' Clases principales
class Usuario {
  +id : int
  +nombre : string
  +username : string
  +password : string
  +vendedor_id : int
  +is_activo : bool
  +tipo : TipoUsuarioEnum
  --
  +login() : bool
  +logout() : void
  +cambiarPassword() : bool
}

class Vendedor {
  +id : int
  +codigo : string
  +nombre : string
  +departamento : string
  +is_activo : bool
  +comision_id : int
  +created_at : datetime
  +updated_at : datetime
  --
  +registrarVenta() : Venta
  +consultarComisiones() : List<Comision>
  +gestionarAlmacenes() : List<Almacen>
}

class Comision {
  +id : int
  +descripcion : string
  +periodo_1 : int
  +comision_1 : float
  +periodo_2 : int
  +comision_2 : float
  +periodo_3 : int
  +comision_3 : float
  --
  +calcularComision(periodo: int) : float
}

class Cliente {
  +id : int
  +codigo : string
  +nombre : string
  +direccion : string
  +telefono : string
  +zona_id : int
  --
  +realizarCompra() : Venta
  +consultarHistorial() : List<Venta>
}

class Zona {
  +id : int
  +codigo : string
  +nombre : string
  +ciudad : string
  --
  +obtenerClientes() : List<Cliente>
}

class Producto {
  +id : int
  +codigo : string
  +nombre : string
  +grupo_id : int
  +marca_id : int
  +costo : number
  +precio : number
  +is_activo : bool
  +created_at : datetime
  +updated_at : datetime
  --
  +calcularGanancia() : number
  +verificarStock() : int
}

class GrupoProducto {
  +id : int
  +codigo : string
  +descripcion : string
  --
  +obtenerProductos() : List<Producto>
}

class MarcaProducto {
  +id : int
  +codigo : string
  +descripcion : string
  --
  +obtenerProductos() : List<Producto>
}

class LoteProducto {
  +id : int
  +producto_id : int
  +lote : string
  +cantidad_importada : int
  +fecha_ingreso : date
  +mes_vencimiento : int
  +año_vencimiento : int
  +is_activo : bool
  +created_at : datetime
  +updated_at : datetime
  --
  +verificarVencimiento() : bool
  +obtenerCantidadDisponible() : int
}

class Venta {
  +id : int
  +id_correlativo : int
  +tipo_transaccion : TipoTransaccionEnum
  +fecha : date
  +cliente_id : int
  +vendedor_id : int
  +total : float
  +descuento : float
  +neto : float
  --
  +calcularTotal() : float
  +aplicarDescuento(descuento: float) : void
  +generarRecibo() : string
}

class DetalleVenta {
  +id : int
  +venta_id : int
  +almacen_id : int
  +producto_id : int
  +cantidad : int
  +precio_unitario : float
  +lote_id : int
  --
  +calcularSubtotal() : float
}

class Almacen {
  +id : int
  +codigo : string
  +descripcion : string
  +vendedor_id : int
  --
  +verificarInventario() : List<Producto>
  +registrarMovimiento() : void
}

class Proveedor {
  +id : int
  +nombre : string
  +telefono : string
  --
  +realizarCompra() : Compra
}

class Compra {
  +id : int
  +id_correlativo : int
  +fecha : date
  +proveedor_id : int
  +total : float
  +descuento : float
  +neto : float
  +vendedor_id : int
  --
  +calcularTotal() : float
  +registrarInventario() : void
}

class DetalleCompra {
  +id : int
  +compra_id : int
  +almacen_id : int
  +producto_id : int
  +cantidad : int
  +costo_unitario : float
  --
  +calcularSubtotal() : float
}

class Billetera {
  +id : int
  +codigo : string
  +descripcion : string
  +moneda : MonedaEnum
  +vendedor_id : int
  --
  +registrarCobranza() : Cobranza
  +consultarSaldo() : float
}

class Cobranza {
  +id : int
  +venta_id : int
  +fecha : date
  +importe : float
  +observaciones : string
  +billetera_id : int
  +recibo : string
  +vendedor_id : int
  +porcentaje_comision : float
  --
  +calcularComision() : float
  +generarRecibo() : string
}

' ============================================================
' RELACIONES
' ============================================================

' Relaciones de usuarios y vendedores
Usuario "*" --> "1" Vendedor : opera
Vendedor "1" --> "*" Comision : tiene

' Relaciones de productos
Producto "*" --> "1" GrupoProducto : pertenece_a
Producto "*" --> "1" MarcaProducto : es_de_marca
Producto "1" --> "*" LoteProducto : se_importa_en

' Relaciones de ventas
Venta "*" --> "1" Cliente : realizada_por
Venta "*" --> "1" Vendedor : registrada_por
Venta "1" --> "*" DetalleVenta : contiene
DetalleVenta "*" --> "1" Producto : incluye
DetalleVenta "*" --> "1" Almacen : desde
DetalleVenta "*" --> "1" LoteProducto : utiliza

' Relaciones de compras
Compra "*" --> "1" Proveedor : realizada_a
Compra "*" --> "1" Vendedor : registrada_por
Compra "1" --> "*" DetalleCompra : contiene
DetalleCompra "*" --> "1" Producto : incluye
DetalleCompra "*" --> "1" Almacen : hacia

' Relaciones de ubicación y almacenes
Cliente "*" --> "1" Zona : ubicado_en
Almacen "*" --> "1" Vendedor : gestionado_por

' Relaciones de cobranzas
Cobranza "*" --> "1" Venta : cancela
Cobranza "*" --> "1" Billetera : registrada_en
Cobranza "*" --> "1" Vendedor : gestionada_por
Billetera "*" --> "1" Vendedor : pertenece_a

@enduml
